# Uchat-app

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  justfile  netlify.toml  package-lock.json  private_key.base64  uchat_init.bash
.github/workflows/: test.yml
backend/crypto/: Cargo.toml
backend/migrations/2026-06-17-142343-0000_create_notifications/: up.sql
backend/migrations/2026-06-17-151050-0000_create_direct_messages/: down.sql  up.sql
backend/migrations/2026-06-17-154136-0000_add_last_seen_to_users/: up.sql
backend/migrations/2026-06-19-055559-0000_add_security_questions/: down.sql  up.sql
backend/query/: Cargo.toml
backend/query/src/: chat.rs  lib.rs  notification.rs  post.rs  schema.rs  session.rs  user.rs  util.rs
backend/server/: Cargo.toml
backend/server/src/: extractor.rs  handler.rs  lib.rs  router.rs
backend/server/src/handler/: chat.rs  user.rs
frontend/: Cargo.toml  index.html  tailwind.config.js  test_router.rs
frontend/src/: app.rs  elements.rs  main.rs  page.rs  tailwind.css  util.rs
frontend/src/elements/: appbar.rs  keyed_notification_box.rs  local_profile.rs  navbar.rs  post.rs  sidebar.rs  toaster.rs
frontend/src/elements/post/: actionbar.rs  content.rs  quick_respond.rs
frontend/src/page/: chat.rs  edit_profile.rs  forgot_password.rs  home.rs  login.rs  new_post.rs  notifications.rs  register.rs  trending.rs  view_profile.rs
frontend/src/page/home/: bookmarked.rs  liked.rs
frontend/src/page/new_post/: chat.rs  image.rs  poll.rs
frontend/src/util/: api_client.rs  cookie.rs
shared/domain/: Cargo.toml
shared/domain/src/: ids.rs  lib.rs  post.rs  user.rs
shared/endpoint/: Cargo.toml
shared/endpoint/src/: lib.rs
shared/endpoint/src/post/: endpoint.rs  types.rs
shared/endpoint/src/user/: endpoint.rs  types.rs
tools/project-init/: Cargo.toml
tools/project-init/src/: main.rs
usercontent/: 6004f77b-6bde-4fd2-9f61-b45c241f4f40  b062c395-340b-45ef-8e07-16107b9b542b  b97505da-edef-4395-bd49-7aaddd3c672a  db5cf151-0f99-4963-8bcc-98101d1e34ad  fc95dc79-5c18-45d6-8fe3-eecbba9a5e5b
