[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
chrono = { version = "0.4.39", features = ["serde"] }
console_log = { version = "1.0", optional = true, features = ["color"] }
dioxus = { version = "0.6.0", default-features = false, features = [
  "dioxus-core-macro",
  "dioxus-hooks",
  "dioxus-html",
  "dioxus-rsx",
  "hooks",
  "html",
  "macro",
] }
dioxus-router = { version = "0.6.0", features = ["web"] }
dioxus-web = "0.6.0"
fermi = "0.3.0"
futures = "0.3.31"
gloo-file = { version = "0.2.3", features = ["futures"] }
gloo-timers = { version = "0.2.6", features = ["futures"] }
gloo-utils = "0.1.7"
indexmap = "1.9.3"
itertools = "0.10.5"
js-sys = "0.3.76"
load-dotenv = "0.1.2"
log = "0.4"
once_cell = "1.20.2"
reqwest = { git = "https://github.com/seanmonstar/reqwest", features = [
  "json"
] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1.0.69"
url = "2.5.4"
web-sys = { version = "0.3.76", features = [
  "Blob",
  "Document",
  "File",
  "FileList",
  "History",
  "HtmlDocument",
  "HtmlInputElement",
  "Location",
  "Window",
] }
wasm-bindgen = "0.2.99"

# needed to build docs (bug in interprocess crate transitive dependency)
interprocess = { version = "1.2.1", features = ["tokio"], optional = true }

uchat_cookie = { path = "../shared/cookie" }
uchat_domain = { path = "../shared/domain" }
uchat_endpoint = { path = "../shared/endpoint" }

[features]
default = ["console_log"]
docbuild = ["interprocess"]
