[dependencies]
cfg-if = "1"
chrono = { version = "0.4.24", features = ["serde"] }
console_log = { version = "1.0", optional = true, features = ["color"] }

# Just use the main dioxus crate with "web" feature
dioxus = { version = "0.6", features = ["web"] }
dioxus-router = "0.6"
# Remove dioxus-web (bundled in 0.6+ via "web" feature)

# DELETE fermi - use Signal::global instead
# fermi = "0.4.0"

futures = "0.3.27"
gloo-file = { version = "0.2.3", features = ["futures"] }
gloo-timers = { version = "0.2.6", features = ["futures"] }
gloo-utils = "0.1.6"
indexmap = "1.9.3"
itertools = "0.10.5"
js-sys = "0.3.61"
load-dotenv = "0.1.2"
log = "0.4"
once_cell = "1.17.1"
reqwest = { git = "https://github.com/seanmonstar/reqwest", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
url = "2.3.1"
web-sys = { version = "0.3.61", features = [
  "Blob", "Document", "File", "FileList", "History", "HtmlDocument",
  "HtmlInputElement", "Location", "Window",
]}
wasm-bindgen = "0.2.91"

interprocess = { version = "1.2.1", features = ["tokio"], optional = true }

uchat_cookie = { path = "../shared/cookie" }
uchat_domain = { path = "../shared/domain" }
uchat_endpoint = { path = "../shared/endpoint" }
