[package]
name = "uchat_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = "0.8.6"
bb8-diesel = { git = "https://github.com/overdrivenpotato/bb8-diesel.git" }
chrono = { version = "0.4.39", features = ["serde"] }
diesel-derive-newtype = { version = "=2.1.2" }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
password-hash = { version = "0.5.0", features = ["std"] }
r2d2 = "0.8.10"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1.0.69"
tokio = { version = "1.42.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["attributes"] }
url = { version = "2.5.4" }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

uchat_domain = { path = "../../shared/domain", features = ["query"] }
uchat_endpoint = { path = "../../shared/endpoint"}

[dependencies.diesel]
version = "=2.2.6"
features = [
  "postgres",
  "uuid",
  "chrono",
  "serde_json",
  "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
  "postgres_backend",
]
default-features = false

[dev-dependencies]
dotenvy = "0.15.7"
uchat_crypto = { path = "../crypto" }
