[package]
name = "uchat_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "uchat_server"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "json", "macros"] }
base64 = "0.21.7"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
hyper = { version = "0.14.31", features = ["full"] }
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1.0.69"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = [
  "full",
] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

uchat_cookie = { path = "../../shared/cookie" }
uchat_crypto = { path = "../crypto" }
uchat_domain = { path = "../../shared/domain" }
uchat_endpoint = { path = "../../shared/endpoint" }
uchat_query = { path = "../query" }
